# PhysxParser

./: .gitmodules  CMakeLists.txt  README.md
include/: PhysxHeader.h  PhysxReader.h
include/heightfield/: Info.h  Reader.h  Structs.h
src/: PhysxHeader.cpp  PhysxReader.cpp
src/heightfield/: Reader.cpp
